fix(dropdown): add dark mode variables

--- a/tegel/src/components/dropdown/_dropdown-core.scss
+++ b/tegel/src/components/dropdown/_dropdown-core.scss
@@ -3,7 +3,7 @@
 @mixin dropdown-wrapper {
   font: var(--sdds-detail-ex-02);
   letter-spacing: var(--sdds-detail-ex-02-ls);
-  color: var(--sdds-grey-958);
+  color: var(--sdds-link);
   display: flex;
   align-items: center;
   background-color: var(--sdds-dropdown-bg);
@@ -24,10 +24,9 @@
 
   &:focus {
     &::before {
-      // this is the blue line that appears on input focus
       content: ' ';
       position: absolute;
-      z-index: 1;
+      z-index: 2;
       bottom: 0;
       left: 0;
       width: 100%;
@@ -79,13 +78,13 @@
 .sdds-dropdown-label-inside {
   font: var(--sdds-detail-ex-07);
   letter-spacing: var(--sdds-detail-ex-07-ls);
-  color: var(--sdds-grey-700);
+  color: var(--sdds-dropdown-label-inside);
 }
 
 .sdds-dropdown-label-outside {
   font: var(--sdds-detail-ex-05);
   letter-spacing: var(--sdds-detail-ex-05-ls);
   display: block;
-  color: var(--sdds-grey-958);
+  color: var(--sdds-dropdown-label-outside);
   margin-bottom: var(--sdds-spacing-element-8);
 }
