--- a/tegel/src/components/dropdown/dropdown-select.scss
+++ b/tegel/src/components/dropdown/dropdown-select.scss
@@ -10,6 +10,7 @@
   select {
     @include dropdown-wrapper;
 
+    color: var(--sdds-link);
     appearance: none;
     background-image: url("data:image/svg+xml,%3Csvg class='sdds-dropdown-arrow' width='12' height='7' viewBox='0 0 12 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L6 6L11 1' stroke='currentColor' stroke-width='1.25' stroke-linecap='round' stroke-linejoin='round' /%3E%3C/svg%3E");
     background-repeat: no-repeat;
@@ -56,5 +57,12 @@
     .sdds-dropdown-helper {
       color: var(--sdds-negative);
     }
+  }
+}
+
+/* fix for icon in dark theme */
+.sdds-theme-dark {
+  select {
+    background-image: url("data:image/svg+xml,%3Csvg class='sdds-dropdown-arrow' width='12' height='7' viewBox='0 0 12 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L6 6L11 1' stroke='%23cdd1db' stroke-width='1.25' stroke-linecap='round' stroke-linejoin='round' /%3E%3C/svg%3E");
   }
 }
